--- a/trunk/Languages/default-hr.xml
+++ b/trunk/Languages/default-hr.xml
@@ -2550,7 +2550,7 @@
 	<string id="8156" value="Traži"/>
 	<string id="8157" value="Rezultati"/>
 	<string id="8158" value="Očisti"/>
-	<string id="8159" value="Napredno..."/>
+	<string id="8159" value="Napredno"/>
 	<string id="8160" value="Spajam se ..."/>
 	<string id="8161" value="Zahtjev poslat, čekam ..."/>
 	<string id="8162" value="Spojeno, tražim dozvolu za pregled..."/>
