--- a/trunk/Languages/default-en.xml
+++ b/trunk/Languages/default-en.xml
@@ -16,7 +16,7 @@
 		description="Shareaza Default English Skin File"
 		link="http://www.shareaza.com/"
 		email="contact@shareaza.com"
-		version="2.1.0.150"
+		version="2.1.1.0"
 		type="Language"
 		language="en"
 		prompt="Click here to select English as your natural language."
@@ -2906,7 +2906,7 @@
 	<string id="16803" value="The folder you are sharing is already shared as part of another shared folder:\n\n%s"/>
 	<string id="16804" value="You haven't entered a screen name in your user profile.\n\nIt's a good idea to enter a custom screen name so that other users can see who they're connected to.\n\nAre you sure you want to continue without a screen name?"/>
 	<string id="16805" value="You haven't entered your location in your user profile.\n\nIt's a good idea to enter your location so that other users can see where you're from.\n\nAre you sure you want to continue without entering your location?"/>
-	<string id="16806" value="You have indicated that you want to set up port-forwarding on your NAT router or firewall.\n\nPlease configure your network to forward TCP port %i to your local PC."/>
+	<string id="16806" value="You have indicated that you want to set up port-forwarding on your NAT router or firewall.\n\nPlease configure your network to forward TCP and UDP ports %i to your local PC."/>
 	<string id="16807" value="Please type the bandwidth limit you wish to set in the form &quot;123 kb/s&quot; for kilobits per second, or &quot;123 KB/s&quot; for kilobytes per second."/>
 	<string id="16808" value="You have not selected your age and gender.  Are you sure you want to continue without doing this?"/>
 	<string id="16809" value="E&amp;xit"/>
