--- a/trunk/Languages/default-ru.xml
+++ b/trunk/Languages/default-ru.xml
@@ -12,7 +12,7 @@
 		description="Shareaza Default Russian Skin File"
 		link="http://zamoskvaretsi.dtn.ru/dab/shareaza/shareaza.html"
 		email="contact@shareaza.com"
-		version="2.1.0.150"
+		version="2.1.1.0"
 		type="Language"
 		language="ru"
 		prompt="Щелкните здесь для смены языка на Русский (от dAbserver)"
@@ -2895,7 +2895,7 @@
 	<string id="16803" value="Папка, которую вы намереваетесь разделять, уже является частью другой разделяемой папки:\n\n%s"/>
 	<string id="16804" value="Вы не ввели отображаемое имя в Ваш профиль.\n\nВвести какое-либо имя (лучше на латинице) нужно для того, чтобы другие могли видеть с кем соединены.\n\nВы уверенны, что хотите продолжить без отображаемого имени?"/>
 	<string id="16805" value="Вы не ввели местонахождение в Ваш профиль.\n\nУказать местонахождение нужно для того, чтобы другие могли видеть откуда вы соединены.\n\nВы уверенны что хотите продолжить без Вашего местонахождения?"/>
-	<string id="16806" value="Вы указали, что хотите установить переадресацию порта на Вашем NAT маршрутизаторе или брандмауэре.\n\nСконфигурируйте сеть так, чтобы TCP порт %i был переадресован на Ваш ПК."/>
+	<string id="16806" value="Вы указали, что хотите установить переадресацию порта на Вашем NAT маршрутизаторе или брандмауэре.\n\nСконфигурируйте сеть так, чтобы TCP и UDP порт %i был переадресован на Ваш ПК."/>
 	<string id="16807" value="Введите устанавливаемый лимит пропускной способности в виде «123 kb/s» для килобитов за секунду или «123 KB/s» - для килобайтов за секунду."/>
 	<string id="16808" value="Вы не указали Ваш пол и возраст.  Уверенны что хотите продолжить не делая этого?"/>
 	<string id="16809" value="Вы&amp;ход"/>
