--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -2232,14 +2232,14 @@
 	<tip id="ID_DOWNLOADS_SOURCES" message="Buscar más fuentes para este archivo en la red."/>
 	<tip id="ID_DOWNLOADS_TORRENT_INFO" message="Ver información de la descarga BitTorrent seleccionado..."/>
 	<tip id="ID_DOWNLOADS_URL" message="Agregar fuente (URI)..."/>
-    <tip id="ID_DOWNLOADS_VIEW_REVIEWS" message="Ver reviews para la descarga seleccionada"/>
-    <tip id="ID_HELP_ABOUT" message="Información acerca de Shareaza..."/>
+	<tip id="ID_DOWNLOADS_VIEW_REVIEWS" message="Ver reviews para la descarga seleccionada"/>
+	<tip id="ID_HELP_ABOUT" message="Información acerca de Shareaza..."/>
 	<tip id="ID_HELP_CODEC" message="Todo sobre codecs y problemas de video."/>
-    <tip id="ID_HELP_FAQ" message="Visitar los Forums de Shareaza, donde puedes solicitar ayuda. Si deseas pregunta en Español!"/>
+	<tip id="ID_HELP_FAQ" message="Visitar los Forums de Shareaza, donde puedes solicitar ayuda. Si deseas pregunta en Español!"/>
 	<tip id="ID_HELP_ROUTER" message="Consigue ayuda para configurar tu Router Y/O Firewall."/>
 	<tip id="ID_HELP_FORUMS" message="Visitar las foros de Shareaza, para soporte técnico y discusiones."/>
 	<tip id="ID_HELP_GUIDE" message="Visit the Shareaza Users Guide."/>
-    <tip id="ID_HELP_HOMEPAGE" message="Visitar Shareaza.com."/>
+	<tip id="ID_HELP_HOMEPAGE" message="Visitar Shareaza.com."/>
 	<tip id="ID_HELP_SECURITY" message="Ayuda protegiendo tu sistema de programas hostiles"/>
 	<tip id="ID_HELP_UPDATE" message="Checar noticias y actualizaciones."/>
 	<tip id="ID_HELP_WEB_1" message="Visitar este sitio"/>
@@ -2289,8 +2289,8 @@
 	<tip id="ID_LIBRARY_PARENT" message="Mover a la carpeta anterior."/>
 	<tip id="ID_LIBRARY_PROPERTIES" message="Ver y editar las propiedades del archivo..."/>
 	<tip id="ID_LIBRARY_REBUILD" message="Reconstruir Mi Colección, escaneandolo, y adquiriendo la metadata de nuevo."/>
-    <tip id="ID_LIBRARY_REBUILD_ANSI" message="Reconstrir metadata utilizando otro lenguaje."/>
-    <tip id="ID_LIBRARY_REFRESH" message="Actualizar la vista de Mi Colección."/>
+	<tip id="ID_LIBRARY_REBUILD_ANSI" message="Reconstrir metadata utilizando otro lenguaje."/>
+	<tip id="ID_LIBRARY_REFRESH" message="Actualizar la vista de Mi Colección."/>
 	<tip id="ID_LIBRARY_REMOVE" message="Eliminar esta carpeta de Mi Colección."/>
 	<tip id="ID_LIBRARY_RENAME" message="Renombrar el archivo."/>
 	<tip id="ID_LIBRARY_SCAN" message="Escanear para cambio en los archivos."/>
@@ -2487,10 +2487,10 @@
 	<string id="WINDOW_SEARCHPAD" value="Buscar"/>
 	<string id="WINDOW_HELP" value="Ayuda de Shareaza"/>
 	<string id="7000" value="¿Estás seguro que deseas quitar este filtro ?"/>
-    <string id="7001" value="&amp;Schemas"/>
-    <string id="7002" value="Valores Multiple"/>
+	<string id="7001" value="&amp;Schemas"/>
+	<string id="7002" value="Valores Multiple"/>
 	<string id="7003" value="Múltiple"/>
-    <string id="8000" value="Configuración de Shareaza"/>
+	<string id="8000" value="Configuración de Shareaza"/>
 	<string id="8001" value="Bievenido a Shareaza"/>
 	<string id="8002" value="Propiedades del Archivo"/>
 	<string id="8003" value="Editar Mi Perfil"/>
@@ -2504,8 +2504,8 @@
 	<string id="8011" value="Cambiado de vista va a cerrar todas las ventanas que tienes abiertas.  ¿Deseas cambiar ahora?"/>
 	<string id="8060" value="Modo Hub %lu en red(s).  %s en Mi Colección."/>
 	<string id="8061" value="Modo Ultrapeer en %lu vecino(s) .  %s en Mi Coleccin."/>
-    <string id="8062" value="Modo Hub/Ultrapeer %lu en red(s).  %s en Mi Colección."/>
-    <string id="8063" value="Conectado. %s en Mi Colección."/>
+	<string id="8062" value="Modo Hub/Ultrapeer %lu en red(s).  %s en Mi Colección."/>
+	<string id="8063" value="Conectado. %s en Mi Colección."/>
 	<string id="8064" value="Conectado a %lu vecino(s).  Tienes %s en Mi Colección."/>
 	<string id="8065" value="Conectando a la red..."/>
 	<string id="8066" value="Shareaza no esta conectado a la red."/>
@@ -2534,7 +2534,7 @@
 	<string id="8134" value="Se va a iniciar una nueva búsqueda.  ¿Quieres eliminar los resltados actuales?"/>
 	<string id="8135" value="No Hay Metadata"/>
 	<string id="8136" value="Búsqueda de texto puro"/>
-    <string id="8141" value="Mostrar el panel de búsqueda"/>
+	<string id="8141" value="Mostrar el panel de búsqueda"/>
 	<string id="8142" value="Esconder el panel de búsqueda"/>
 	<string id="8143" value="Buscando..."/>
 	<string id="8144" value="Buscar"/>
@@ -2567,7 +2567,7 @@
 	<string id="8179" value="(Limpiar Historía de Búsqueda)"/>
 	<string id="8180" value="El tamaño debe ser"/>
 	<string id="8181" value="&#160;a"/><!-- size from xx TO xx-->
-    <string id="8208" value="Shareaza esta creando hashes para %i archivo(s):"/>
+	<string id="8208" value="Shareaza esta creando hashes para %i archivo(s):"/>
 	<string id="8224" value="Shareaza esta descargando:"/>
 	<string id="8225" value="Esta descarga esta en pausa:"/>
 	<string id="8226" value="Shareaza ha terminado de bajar:"/>
@@ -2816,7 +2816,7 @@
 	<string id="16375" value="Parciales"/>
 	<string id="16376" value="Todos Los Archivos" />
 	<string id="16377" value="HTTP Guard"/>
-    <string id="16384" value="Estás seguro(a) que quieres ejecutar el archivo %s?{n}nAlgunos archivos pueden ser peligrosos para la computadora, y es recomendado tener el antivirus funcionando y actualizado."/>
+	<string id="16384" value="Estás seguro(a) que quieres ejecutar el archivo %s?{n}nAlgunos archivos pueden ser peligrosos para la computadora, y es recomendado tener el antivirus funcionando y actualizado."/>
 	<string id="16385" value="Estas a punto de modificar la metadata de %i archivos. ¿Estás seguro(a) en continuar?"/>
 	<string id="16386" value="Editando metadata de %i archivos."/>
 	<string id="16387" value="El archivo %s no ha sido escaneado.  Por favor espere a que sea escaneado, e intente más tarde."/>
@@ -2888,7 +2888,7 @@
 	<string id="16778" value="URL:"/>
 	<string id="16779" value="Tipo:"/>
 	<string id="16780" value="No "/>
-    <string id="16781" value="Pidiendo..."/>
+	<string id="16781" value="Pidiendo..."/>
 	<string id="16782" value="Suceso!"/>
 	<string id="16783" value="Terminado, haz click a cerrar"/>
 	<string id="16784" value="&amp;Cerrar"/>
@@ -2899,14 +2899,13 @@
 	<string id="16803" value="Esta carpeta ya está compartida como parte de:\n\n%s"/>
 	<string id="16804" value="No se ha especificado un nick en su perfil.\n\nEs buena idea especificar uno, para que los demás usuarios sepan de forma agradable a quien están conectados.\n\n¿Estás seguro(a) de continuar sin sobre-nombre?"/>
 	<string id="16805" value="No ha sido especificada su ubicación en su perfil.\n\nPara otros usuarios podría ser interesante de donde usted es, para crear un mejor sentido de comunidad.\n\n¿Estás seguro(a) de continuar sin especificar la ubicación?"/>
-	<string id="16806" value="Has seleccionado utilizar reenvio de puertos en tu NAT router o firewall.\n\nPor favor configure su red para reenviar el puerto TCP %i a su PC."/>
-	<string id="16807" value="Por favor incluya la unidades para el límite del ancho de bada de la siguiente forma &quot;123 kb/s&quot; para kilobits por segundo, o &quot;123 KB/s&quot; para kiloBytes por segundo."/>
+	<string id="16806" value="Você indicou que deseja fazer o redirecionamento de portas do seu roteador NAT ou firewall.\n\Por favor configure a sua rede para fazer o redirecionamento das portas TCP e UDP %i  para o seu computador."/>	<string id="16807" value="Por favor incluya la unidades para el límite del ancho de bada de la siguiente forma &quot;123 kb/s&quot; para kilobits por segundo, o &quot;123 KB/s&quot; para kiloBytes por segundo."/>
 	<string id="16808" value="No has seleccionado tu edad y sexo. ¿Estas seguro que deseas continuar sin hacer esto?"/>
 	<string id="16809" value="Sa&amp;lir"/>
 	<string id="16810" value="años"/>
 	<string id="16811" value="Automatico"/>
-    <string id="16816" value="La red eDonkey utiliza largas colas con tiempos largos de espera. Limitando tu máxima cola de posición puede que te de problemas para iniciar las descargas.\nEstas seguro que deseas limitar las posiciones de cola que vas a aceptar?"/>
-    <string id="16864" value="Accesando servicios de descubrimiento..."/>
+	<string id="16816" value="La red eDonkey utiliza largas colas con tiempos largos de espera. Limitando tu máxima cola de posición puede que te de problemas para iniciar las descargas.\nEstas seguro que deseas limitar las posiciones de cola que vas a aceptar?"/>
+	<string id="16864" value="Accesando servicios de descubrimiento..."/>
 	<string id="16865" value="Accesando el servicio de descubrimiento en &quot;%s&quot;..."/>
 	<string id="16866" value="Transacción con el GWebCache (&quot;%s&quot;) fué completada."/>
 	<string id="16867" value="Falla del servicio de descubrimiento &quot;%s&quot; número %i."/>
@@ -2934,7 +2933,7 @@
 	<string id="16994" value="El archivo &quot;%s&quot;, no se pudo cargar."/>
 	<string id="16995" value="Puede estar corrupto, o usted no tiene los Codecs necesarios para su reproducción."/>
 	<string id="16996" value="Parte de este archivo no pudo ser reproducido. Usted puede necesitar Codecs adicionales."/>
-    <string id="16997" value="No hay ningún archivo reproduciendose.  Haz doble click a un archivo de media en tu librería para reproducirlo."/>
+	<string id="16997" value="No hay ningún archivo reproduciendose.  Haz doble click a un archivo de media en tu librería para reproducirlo."/>
 	<string id="16998" value="S &#160; &#160; H &#160; &#160; A &#160; &#160; R &#160; &#160; E &#160; &#160; A &#160; &#160; Z &#160; &#160; A &#160; &#160; &#160; &#160; &#160; M &#160; &#160; E &#160; &#160; D &#160; &#160; I &#160; &#160; A &#160; &#160; &#160; &#160; &#160; S &#160; &#160; Y &#160; &#160; S &#160; &#160; T &#160; &#160; E &#160; &#160; M"/> <!-- on one line -->
 	<string id="16999" value="P L A Y L I S T"/>
 	<string id="17024" value="Iniciando conexión a %s..."/>
@@ -2990,7 +2989,7 @@
 	<string id="17130" value="eDonkey2000 (HighID)"/>
 	<string id="17216" value="Iniciando conexión a servidor eDonkey2000 en %s..."/>
 	<string id="17217" value="Conectado en servidor eDonkey2000 %s, handshaking..."/>
-    <string id="17218" value="ED2K[%s] %s"/>
+	<string id="17218" value="ED2K[%s] %s"/>
 	<string id="17219" value="El servidor eDonkey2000 %s no aceptó la conexión."/>
 	<string id="17220" value="El servidor eDonkey2000 %s nos dió %lu como número de identificación."/>
 	<string id="17221" value="El servidor eDonkey2000 %s cambió nuestro número de identificación de %lu a %lu."/>
@@ -3104,7 +3103,7 @@
 	<string id="20134" value="Choked"/>
 	<string id="20135" value="Siguiente"/>
 	<string id="20136" value="C"/>
-    <string id="20200" value="Domingo"/>
+	<string id="20200" value="Domingo"/>
 	<string id="20201" value="Lunes"/>
 	<string id="20202" value="Martes"/>
 	<string id="20203" value="Miércoles"/>
